# hyperspell-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  package.json  pyproject.toml  smithery.yaml
hyperspell-mcp/: server.py
hyperspell_mcp/: server.py  types.py
src/: index.ts
src/hyperspell_mcp/: __main__.py  server.py  types.py
