[project]
name = "hyperspell_mcp"
version = "0.1.0"
description = "Hyperspell MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperspell>=0.8.1",
    "mcp[cli]>=1.4.1",
]

[[project.authors]]
name = "Manu Ebert"
email = "manu@hyperspell.com"

[project.scripts]
server = "hyperspell_mcp.server:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"