[project]
name = "hyperspell_mcp"
version = "0.2.1"
description = "Hyperspell MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperspell>=0.8.2",
    "mcp[cli]>=1.5.0",
]

[[project.authors]]
name = "Manu Ebert"
email = "manu@hyperspell.com"

[project.urls]
Homepage = "https://www.hyperspell.com"
Issues = "https://github.com/hyperspell/hyperspell-mcp/issues"

[project.scripts]
hyperspell_mcp = "hyperspell_mcp:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
